main/default/objects/Workplan__c/Workplan__c.object-meta.xml
<CustomObject>
    <label>Workplan</label>
    <nameField>
        <label>Workplan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workplans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>