main/default/objects/Workplan__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Epic</label>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>Workplans</relationshipLabel>
    <relationshipName>Workplans</relationshipName>
    <type>Lookup</type>
</CustomField>