main/default/objects/Workplan__c/fields/Total_Open_Project_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Project_Tasks__c</fullName>
    <label>Total Open Workplan Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>