main/default/objects/Workplan__c/fields/Total_Open_Workplan_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Workplan_Tasks__c</fullName>
    <label>Total Open Workplan Tasks</label>
    <summaryFilterItems>
        <field>Workplan_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Completed, Withdrawn</value>
    </summaryFilterItems>
    <summaryForeignKey>Workplan_Item__c.Workplan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>