main/default/objects/Workplan__c/fields/Total_Proposed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Proposed_Hours__c</fullName>
    <label>Total Proposed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>