main/default/objects/Workplan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPM Project Setup</fullName>
            </value>
            <value>
                <fullName>AppExchange Package</fullName>
            </value>
            <value>
                <fullName>Application Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>