main/default/objects/Workplan__c/validationRules/Check_Open_Workplan_Tasks.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Open_Workplan_Tasks</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Total_Open_Workplan_Tasks__c &gt; 0,
ISPICKVAL( Status__c,&apos;Completed&apos;))</errorConditionFormula>
    <errorMessage>Please complete all the tasks to complete the workplan.</errorMessage>
</ValidationRule>