main/default/objects/Workplan__c/listViews/Compass_Connect.listView-meta.xml
<ListView>
    <fullName>Compass_Connect</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Epic__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Total_Open_Workplan_Tasks__c</columns>
    <columns>Total_Proposed_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>connect</value>
    </filters>
    <label>Compass Connect</label>
</ListView>